@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="300px" android:layout_width="fill_parent"
-    android:orientation="vertical" android:id="@+id/itemRoot"
-    android:paddingLeft="20dip" android:paddingRight="20dip"
-    android:layout_marginLeft="10dip" android:layout_marginRight="10dip">
+    android:id="@+id/itemRoot"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="10dip"
+    android:layout_marginRight="10dip"
+    android:minWidth="300px"
+    android:orientation="vertical"
+    android:paddingLeft="20dip"
+    android:paddingRight="20dip" >
+
     <TextView 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" 
@@ -11,13 +17,17 @@
         android:textStyle="bold"
         android:text="ECU Name">
     </TextView>
-    <EditText 
-        android:text="7D0" 
+
+    <EditText
         android:id="@+id/txtECUNameDID"
-        android:layout_width="fill_parent" 
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:visibility="visible" 
-        android:freezesText="true">
+        android:freezesText="true"
+        android:inputType="number"
+        android:maxLength="5"
+        android:text="2000"
+        android:visibility="visible" >
+
     </EditText>
     <TextView 
         android:layout_width="fill_parent"
@@ -26,13 +36,17 @@
         android:textStyle="bold" 
         android:text="DID Location">
     </TextView>
-    <EditText 
-        android:text="DE00" 
+
+    <EditText
         android:id="@+id/txtDIDLocation"
-        android:layout_width="fill_parent" 
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:visibility="visible" 
-        android:freezesText="true">
+        android:freezesText="true"
+        android:inputType="number"
+        android:maxLength="5"
+        android:text="56832"
+        android:visibility="visible" >
+
     </EditText>
     <CheckBox android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:id="@+id/chkEncryptedDID"
